<resources>
    <string name="app_name">Content AI</string>

    <string name="onboard_text">Discover personalized<br>
                                content with our AI</br></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="content_ai">Content AI</string>
    <string name="email_signup">Sign up with Email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Already have an account?<u>Login</u> </string>
    <string name="content_ai_message">There are many programming languages ​​in the market that are used in designing and building websites, various applications and other tasks. All these languages ​​are popular in their place and in the way they are used, and many programmers learn and use them.</string>


</resources>